# zSCOUT-compass-svc

./: .gitignore  AGENTS.md  README.md  pyproject.toml  zSCOUT-compass-svc.slnx
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml
.specify/specs/001-compass-grpc-service/: plan.md  spec.md  tasks.md
.specify/specs/001-compass-grpc-service/checklists/: requirements.md
.specify/specs/003-rest-sse-migration/: plan.md  spec.md  tasks.md
.specify/specs/003-rest-sse-migration/checklists/: requirements.md
.specify/specs/008-csharp-migration/: clarify.md  plan.md  spec.md  tasks.md
.specify/specs/008-csharp-migration/checklists/: requirements.md
deploy/: Dockerfile  docker-compose.yml
src/ZScout.CompassSvc/: CompassService.cs  HeadingCache.cs  HeadingReaderService.cs  Program.cs  Qmc5883lDriver.cs  ZScout.CompassSvc.csproj
src/compass_svc/: __init__.py  __main__.py  compass.py  config.py  i2c_driver.py  server.py
src/proto/: compass.proto
tests/: conftest.py  test_compass.py  test_i2c_driver.py  test_server.py
tests/ZScout.CompassSvc.Tests/: CompassServiceTests.cs  EndpointTests.cs  ZScout.CompassSvc.Tests.csproj
