[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "zscout-compass-svc"
version = "0.1.0"
description = "zSCOUT Compass Hardware Service — QMC5883L magnetometer gRPC API"
requires-python = ">=3.11"
dependencies = [
	"grpcio>=1.62.0",
	"grpcio-tools>=1.62.0",
	"protobuf>=4.25.0",
	"smbus2>=0.4.3",
]

[project.optional-dependencies]
dev = [
	"pytest>=8.0.0",
	"pytest-asyncio>=0.23.0",
	"grpcio-testing>=1.62.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
