[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zscout-compass-svc"
version = "0.2.0"
description = "zSCOUT Compass Hardware Service — QMC5883L magnetometer REST+SSE API"
requires-python = ">=3.11"
dependencies = [
	"fastapi>=0.115.0",
	"uvicorn[standard]>=0.34.0",
	"sse-starlette>=2.0.0",
	"smbus2>=0.4.3",
]

[project.optional-dependencies]
dev = [
	"pytest>=8.0.0",
	"httpx>=0.28.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
